--- a/SDL2-ttf.cabal
+++ b/SDL2-ttf.cabal
@@ -18,9 +18,9 @@ Library
   Hs-source-dirs:     src
   Build-Depends:      base >= 3 && < 5, sdl2
   default-extensions: ForeignFunctionInterface
-  Exposed-Modules:    Graphics.UI.SDL.TTF.Types,
-                      Graphics.UI.SDL.TTF.FFI
-                      Graphics.UI.SDL.TTF
+  Exposed-Modules:    SDL.TTF.Types,
+                      SDL.TTF.FFI
+                      SDL.TTF
   GHC-Options:        -Wall
   include-dirs:       cbits
   C-sources:          cbits/rendering.c
@@ -30,7 +30,7 @@ Library
 executable font-test
   main-is:          font_test.hs
   hs-source-dirs:   examples
-  build-depends:    base >= 3 && <5, sdl2, sdl2-ttf
+  build-depends:    base >= 3 && <5, sdl2, sdl2-ttf, linear
   GHC-Options:      -Wall
   default-language: Haskell2010
 
